option('compiler', type : 'boolean', value : true)
option('tests', type : 'boolean', value : false)
option('delayed_rc', type : 'boolean', value : true)
option('leak_mem', type : 'boolean', value : true)
option('static_exe', type : 'boolean', value : false)
option('math_library', type : 'boolean', value : true)
